# bkpk

./: README.md  _setup.ini  bkpk.sh  release.sh  requirements.txt  setup.cfg  setup.py
bkpk/: __init__.py  __main__.py  helpers.py  models.py  pack.py  unpack.py
demo_dir/: file.txt
demo_dir/directory/subdir/: in_subdir.txt
example/directory/: in_dir.txt
src/: example.py
src/bkpk/: __init__.py
