[metadata]
description-file=README.md
license_files=LICENSE.md

project_urls =
    Documentation = "https://github.com/nsde/bkpk#readme"
    Changes = https://github.com/nsde/bkpk/commits/master
    Source Code = https://github.com/nsde/bkpk
    Issue Tracker = https://github.com/nsde/bkpk/issues

[options]
packages = find:
include_package_data = True
python_requires = >= 3.8
console_scripts =
    bkpk = __main__:main
